<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/name_region_popup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/region_dialog"
        android:layout_width="296dp"
        android:layout_height="224dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="0.496"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/prompt_popup_text"
            android:layout_width="253dp"
            android:layout_height="31dp"
            android:text="@string/tittle_region_popup"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            tools:layout_editor_absoluteY="67dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="19dp" />

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/your_name_map"
            android:inputType="text"
            android:textAlignment="center"
            android:autofillHints="" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <LinearLayout
            android:layout_width="228dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ok_name_region_popup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="33dp"
                tools:layout_editor_absoluteY="174dp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/cancel_name_region_popup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="158dp"
                tools:layout_editor_absoluteY="174dp" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>