<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountInformation">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@color/blueOxford_app_theme"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/hamburgerButton"
                android:layout_width="35dp"
                android:layout_height="32dp"
                android:background="@drawable/baseline_arrow_back_ios_new_24"
                android:backgroundTint="@color/silver"
                android:elevation="20dp"
                android:onClick="goToPrincipalView"
                android:translationX="10dp"
                android:translationY="10dp"
                app:civ_circle_background_color="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.120000005"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_title"
                android:textColor="@color/silver"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView4"
        tools:layout_editor_absoluteX="0dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageUpload"
            android:layout_width="229dp"
            android:layout_height="185dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toTopOf="@+id/buttonUploadImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.55" />

        <Button
            android:id="@+id/buttonUploadImage"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:backgroundTint="@color/blueOxford_app_theme"
            android:drawableLeft="@drawable/baseline_upload_24"
            android:onClick="uploadImageProfileAction"
            android:text="@string/edit_profile"
            android:textSize="13sp"
            android:visibility="gone"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="RtlHardcoded" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp"
            android:showDividers="middle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.96">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/informationSection"
                android:textAlignment="center"
                android:textColor="@color/blueOxford_app_theme"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/complete_name"
                app:startIconDrawable="@drawable/baseline_contacts_24">

                <AutoCompleteTextView
                    android:id="@+id/textFieldFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:digits="@string/regexLetters"
                    tools:ignore="LabelFor,TextContrastCheck,VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/userName"
                app:startIconDrawable="@drawable/baseline_perm_identity_24">

                <AutoCompleteTextView
                    android:id="@+id/textFieldUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:digits="@string/regexUsernameCharacters"
                    tools:ignore="LabelFor,TextContrastCheck,VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                app:startIconDrawable="@drawable/baseline_alternate_email_24">

                <AutoCompleteTextView
                    android:id="@+id/textFieldEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    tools:ignore="LabelFor,TextContrastCheck,VisualLintTextFieldSize" />

            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/comboBoxTextField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:helperTextTextColor="@color/red"
                app:startIconDrawable="@drawable/baseline_type_user_24">

                <AutoCompleteTextView
                    android:id="@+id/textFieldUserTypeUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/typeUser"
                    android:inputType="none"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="22dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/WID"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/buttonDeleteAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/mapboxRedDark"
                    android:drawableLeft="@drawable/baseline_no_accounts_24"
                    android:onClick="deleteAccountAction"
                    android:text="@string/delete_account"
                    android:textSize="13sp"
                    app:cornerRadius="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/buttonEditInformation"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="RtlHardcoded" />

                <Button
                    android:id="@+id/buttonEditInformation"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/blueOxford_app_theme"
                    android:drawableLeft="@drawable/baseline_drive_file_rename_outline_24"
                    android:onClick="editAccountAction"
                    android:text="@string/edit_information"
                    android:textSize="13sp"
                    app:cornerRadius="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/buttonDeleteAccount"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="RtlHardcoded" />

                <Button
                    android:id="@+id/buttonSaveInformation"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:backgroundTint="@android:color/holo_green_dark"
                    android:drawableLeft="@drawable/baseline_save_24"
                    android:onClick="saveAccountInformationAction"
                    android:text="@string/save_information"
                    android:textSize="13sp"
                    android:visibility="invisible"
                    app:cornerRadius="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/buttonEditInformation"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@id/buttonEditInformation"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="RtlHardcoded" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>